Fixed spacing and padding

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,8 @@ body {
 
 .title {
   margin: 0;
+    padding: 0;
+    font-weight: 100;
   position: relative;
 }
 
